--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.21",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "typewriter-effect": "^2.18.0",
